--- a/Inicio.html
+++ b/Inicio.html
@@ -77,6 +77,6 @@
     </div>
 
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
 </html>
