--- a/Portada.html
+++ b/Portada.html
@@ -40,6 +40,6 @@
     </nav>
 
     <h1></h1>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
 </html>
