--- a/Productos.html
+++ b/Productos.html
@@ -117,6 +117,6 @@
       </div>
 
     <h1></h1>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
 </html>
