--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </div>
 
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
 </html>
