--- a/Inicio.html
+++ b/Inicio.html
@@ -76,6 +76,27 @@
       </button>
     </div>
 
+      <div class="container">
+
+          <div class="d-flex flex-lg-row justify-content-evenly flex-wrap">
+            <div class="card m-3" style="width: 18rem;">
+              <img src="img/Varios.png" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title">Variedad de Impresiones</h5>
+                <p class="card-text">Trabajamos arte, técnica y diseño, con elección adecuada de materiales para lograr impresiones de alta calidad.</p>
+                <a href="#" class="btn btn-primary">Explorar más:</a>
+              </div>
+            </div>
+            
+            <div class="card m-3" style="width: 18rem;">
+              <img src="img/Rotativa.png" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title">Trabajos con Calidad</h5>
+                <p class="card-text">Nuestros trabajos pueden ser mecánicos o electrónicos, y utilizamos métodos como la impresión offset, digital y rotativa.</p>
+                <a href="#" class="btn btn-primary">Dirigirse a:</a>
+              </div>
+            </div>
+
 
   <script src="JS/bootstrap.bundle.min.js"></script>
   </body>
